fix some random stuff